--- a/style.css
+++ b/style.css
@@ -148,6 +148,7 @@ body {
     width: 880px;
     height: 66px;
     margin-bottom: 30px;
+    color: #E1E1E6;
 }
 
 .time-name {
@@ -226,4 +227,76 @@ input {
     position: relative;
     left: 826px;
     cursor: pointer;
+}
+
+@media (max-width: 767px) {
+    body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px 20px;
+    gap: 30px;
+    width: 375px;
+    height: 682px;
+
+    background: #1A1924;
+    border-radius: 8px 8px 0px 0px;
+    }
+
+    .perfil {
+    padding: 0px;
+    gap: 26px;
+
+    width: 311px;
+    height: 88px;
+    }
+
+    .block {
+        margin-left: 0px;
+    }
+
+    .time-perfil {
+        margin-top: 90px;
+        text-align: center;
+        justify-content: center;
+    }
+
+    .send {
+        width: 311px;
+        height: 80px;
+        white-space: wrap;
+    }
+
+    .name-time {
+        width: 149px;
+            height: 56px;
+    }
+
+    .receiver {
+        width: 311px;
+        height: 80px;
+    }
+
+    .time-name {
+        width: 149px;
+        height: 84px;
+    }
+
+    .content3 p {
+        white-space: normal;
+    }
+
+    .send-msg {
+        width: 311px;
+        height: 76px;
+    }
+
+    input {
+        width: 311px;
+        height: 52px;
+    }
+
+    .send-icon {
+        left: 260px;
+    }
 }
